--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -160,3 +160,16 @@ button {
     background-color: white;
   }
 }
+
+.run-bun {
+  background-color: rgb(12, 209, 38);
+  padding: 10px;
+}
+
+.output-console{
+  width: 100%;
+  margin-top: 10px;
+  padding: 10px;
+  font-size: 20px;
+  height: 200px;
+}
